--- a/index.html
+++ b/index.html
@@ -3,12 +3,33 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="stylesheet" href="/src/styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
   </head>
   <body>
     <div id="app">
-      <h1>Bootcamp JS - JavaScript SandBox</h1>
+      <!-- <label for="sumando1">Sumando 1:</label>
+      <input type="number" id="sumando1" />
+      <label for="sumando2">Sumando 2:</label>
+      <input type="number" id="sumando2" />
+      <button id="sumar">Sumar</button>
+      <div id="resultado"></div> -->
+      <!-- <label for="nombre">Nombre:</label>
+      <input type="text" id="nombre" />
+      <label for="apellido">Apellido:</label>
+      <input type="text" id="apellido" />
+      <button id="saludar">Saludar</button>
+      <div id="resultado"></div> -->
+
+
+      <img id="foto-principal" src="https://raw.githubusercontent.com/Lemoncode/fotos-ejemplos/main/venecia/portada.jpg" alt="Foto Principal">
+      <div>
+        <img id="miniatura1" class="miniatura" src="https://raw.githubusercontent.com/Lemoncode/fotos-ejemplos/main/venecia/foto1.jpg" alt="Basilica de santa maria de la salud, venecia" />
+        <img id="miniatura2" class="miniatura" src="https://raw.githubusercontent.com/Lemoncode/fotos-ejemplos/main/venecia/foto2.jpg" alt="Gondolas en venecia" />
+        <img id="miniatura3" class="miniatura" src="https://raw.githubusercontent.com/Lemoncode/fotos-ejemplos/main/venecia/foto3.jpg" alt="Puente de rialto, venecia" />
+        <img id="miniatura4" class="miniatura" src="https://raw.githubusercontent.com/Lemoncode/fotos-ejemplos/main/venecia/foto4.jpg" alt="Plaza de san marcos, venecia" />
+      </div>
     </div>
     <script type="module" src="/src/main.js"></script>
   </body>
